force-app/main/default/objects/ccrz__E_PageLabel__c/ccrz__E_PageLabel__c.object-meta.xml
<CustomObject>
    <description>Holds the configuration information for field labels, help text, or error messages on a specific page with specific storefront and language.</description>
    <label>CC Page Label</label>
    <nameField>
        <label>Page Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Page Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>