force-app/main/default/objects/ccrz__E_PageLabel__c/fields/ccrz__PageLabelId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageLabelId__c</fullName>
    <description>External Id for data loading</description>
    <externalId>true</externalId>
    <label>PageLabelId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>