force-app/main/default/objects/ccrz__E_PageLabel__c/fields/ccrz__PageName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageName__c</fullName>
    <description>Page name. A page named &quot;All&quot; applies to all pages. The B2B Commerce first returns records with matched language, storefront, and pageName. If no match found, return records with page named &quot;All&quot; and matched store and store.</description>
    <externalId>true</externalId>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>