force-app/main/default/objects/ccrz__E_PageLabel__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <formula>IF(AND(ccrz__Storefront__c = &apos;Global&apos;,ccrz__PageName__c = &apos;All&apos;), 1,
IF(AND(ccrz__Storefront__c = &apos;Global&apos;,ccrz__PageName__c != &apos;All&apos;), 2,
IF(AND(ccrz__Storefront__c != &apos;Global&apos;,ccrz__PageName__c = &apos;All&apos;),3,4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>