force-app/main/default/objects/ccrz__E_PageLabel__c/fields/ccrz__Value__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Value__c</fullName>
    <description>The value of a page label with specific store, language, and page.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>