force-app/main/default/objects/ccrz__E_PageLabel__c/fields/ccrz__ValueRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ValueRT__c</fullName>
    <label>ValueRT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>