force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>NAME</columns>
    <columns>ccrz__Value__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>