force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__All1.listView-meta.xml
<ListView>
    <fullName>ccrz__All1</fullName>
    <columns>NAME</columns>
    <columns>ccrz__PageLabelId__c</columns>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>ccrz__Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>