force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__CheckOut.listView-meta.xml
<ListView>
    <fullName>ccrz__CheckOut</fullName>
    <columns>NAME</columns>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__PageLabelId__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>ccrz__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__PageName__c</field>
        <operation>equals</operation>
        <value>CheckOut</value>
    </filters>
    <label>CheckOut</label>
    <language>en_US</language>
</ListView>