force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__Global.listView-meta.xml
<ListView>
    <fullName>ccrz__Global</fullName>
    <columns>NAME</columns>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__Storefront__c</field>
        <operation>equals</operation>
        <value>Global</value>
    </filters>
    <label>Global</label>
    <language>en_US</language>
</ListView>