force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__OrderSummary.listView-meta.xml
<ListView>
    <fullName>ccrz__OrderSummary</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>OrderSummary</value>
    </filters>
    <label>OrderSummary</label>
    <language>en_US</language>
</ListView>