force-app/main/default/objects/ccrz__E_PageLabel__c/listViews/ccrz__Wireframe.listView-meta.xml
<ListView>
    <fullName>ccrz__Wireframe</fullName>
    <columns>NAME</columns>
    <columns>ccrz__PageName__c</columns>
    <columns>ccrz__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__Storefront__c</field>
        <operation>equals</operation>
        <value>Wireframe</value>
    </filters>
    <label>Wireframe</label>
    <language>en_US</language>
</ListView>